infrastructure/weave-gitops/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  parentRefs:
    - name: main
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "flux.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
